# blobdetection

./: .gitignore  .vimrc  CMakeLists.txt  Makefile  README  blob.c  blob.h  depthtree.c  depthtree.h  depthtree_macros.h  depthtree_output.c  example.h  example1.c  example2.c  fingerdetection.h  output.c  output.h  output_depthtree.c  output_depthtree.h  output_threshtree.c  output_threshtree.h  settings.h  threshtree.c  threshtree.h  threshtree_macros.h  threshtree_macros_old.h  threshtree_output.c  threshtree_output.h  tree.c  tree.h
examples/: CMakeLists.txt  example.h  helpers.hpp
examples/assets/: rescale_images.sh
examples/example1/: CMakeLists.txt  example1.c
examples/example2/: CMakeLists.txt  example2.c
examples/find_frame/: CMakeLists.txt  find_frame.cpp
examples/opencv/: CMakeLists.txt  opencv.cpp
include/: blob.h  depthtree.h  threshtree.h  tree.h
include/blobdetection/: blob.h  depthtree.h  enums.h  output.h  output_depthtree.h  output_threshtree.h  settings.default.h  threshtree.h  tree.h  tree_sort.h
src/: CMakeLists.txt  blob.c  depthtree.c  depthtree_macros.h  enums.c  fingerdetection.h  io_for_debugging.c  output.c  output_depthtree.c  output_threshtree.c  quicksort.c  quicksort.h  threshtree.c  threshtree_macros.h  threshtree_macros_old.h  threshtree_old.c  threshtree_old.h  tree.c  tree_compare.c  tree_hash.c  tree_intern.c  tree_intern.h  tree_loops.h  tree_operations.c  tree_sort.c
tests/: CMakeLists.txt
tests/tree/: CMakeLists.txt  tree_test_setup.hpp
tests/tree/basis_functions/: CMakeLists.txt  test_basis_functions.cpp
tests/tree/compare/: CMakeLists.txt  test_tree_compare.cpp
tests/tree/swap_nodes/: CMakeLists.txt  test_swap_nodes.cpp
tests/tree/swap_trees/: CMakeLists.txt  test_swap_trees.cpp
